followup tweaks 	- limited date filter years to 2010 -> (5 years from present) 	- date formats in view popup
removed ability for new adjustment types to be debit

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -3415,7 +3415,7 @@ div.section-expandable-header-options div.followup-configure-list-pagination
 	bottom		: 0.25em;
 }
 
-/************************ END - Generic Caption - END ************************/
+/************************ END - Section - END ************************/
 
 /************************ START - Add Credit Card PopUp - START ************************/
 
