--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -427,6 +427,9 @@ input[type='button'], input.normal-button[type='submit'], a.button, button
 	cursor: 			pointer !important;
 	-moz-user-select:	none;
 	-webkit-user-select	: none;
+	
+	/* This is experimental -- remove if it looks shit */
+	text-shadow	: 0px 1px 2px #fff;
 }
 
 button[disabled]
