--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -440,6 +440,9 @@ button[disabled]
 	-moz-user-select	: none !important;
 	-webkit-user-select	: none !important;
 	cursor				: default !important;
+	
+	/* This is experimental -- remove if it looks shit */
+	text-shadow	: 0px 1px 2px #ddd;
 }
 
 button[disabled] img
